--- a/dislinkt-front-end/src/app/components/registration/registration.component.html
+++ b/dislinkt-front-end/src/app/components/registration/registration.component.html
@@ -1,44 +1,41 @@
 <div class="container">
     <h3 style="text-align: center">REGISTRATION</h3>
     <br>
-    <mat-label>Username:</mat-label>
-    <div class="example-container">
-        <mat-form-field appearance="fill">
-          <input matInput required>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        
+      <div fxFlex="100%">
+        <mat-form-field appearance="fill" class="form-field">
+          <mat-label>Username</mat-label>
+          <input matInput formControlName="username" name="username">
+          <mat-error *ngIf="registerForm.value.username">Between 4 and 10 characters is acceptable.</mat-error>         
         </mat-form-field>
       </div>
-    <br>
-    <mat-label>E-Mail:</mat-label>
-    <div class="example-container">
-        <mat-form-field appearance="fill">
-          <input matInput placeholder="pat@example.com" [formControl]="email" required>
-          <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+      <div fxFlex="100%">
+        <mat-form-field appearance="fill" class="form-field">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email" name="email">
+          <mat-error *ngIf="registerForm.value.email">Email is not.</mat-error>
         </mat-form-field>
       </div>
-    <br>
-    <mat-label>Password:</mat-label>
-    <div class="example-container">
-        <mat-form-field appearance="fill">
-          <input matInput [type]="hide1 ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide1">
-            <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
+      <div fxFlex="100%">
+        <mat-form-field appearance="fill" class="form-field">
+          <mat-label>Password</mat-label>
+           <input matInput formControlName="password" name="password" type="password" required>
+           <mat-error *ngIf="registerForm.value.password">Password must be a combination of lower-case, upper-case, numbers and at least 9 characters long</mat-error>
         </mat-form-field>
-    </div>
-    <br>
-    <mat-label>Confirm Password:</mat-label>
-    <div class="example-container">
-        <mat-form-field appearance="fill">
-          <input matInput [type]="hide2 ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide2">
-            <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-    </div> 
-    <br>
-    <div>
-        <button mat-raised-button color="primary" (click) = "signUp()">Sign Up</button>   
-    </div>
+      </div>
+      <div fxFlex="100%">
+        <mat-form-field appearance="fill" class="form-field">
+          <mat-label>Confirm Password</mat-label>
+          <input matInput formControlName="confirmPassword" name="confirmPassword" type="password" required pattern="{{registerForm.value.password}}">
+          <mat-error *ngIf="registerForm.value.confirmPassword">Passwords do not match.</mat-error>
+      </mat-form-field>
+      </div>
+        <br>
+      <div>
+          <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">Register</button>
+      </div>
+    </form>
 </div>
 
 
