--- a/dislinkt-front-end/src/app/components/login/login.component.html
+++ b/dislinkt-front-end/src/app/components/login/login.component.html
@@ -19,9 +19,9 @@
         </mat-form-field>
       </div>
       
-        <br>
-
-        <div fxFlex="100%">
+      <p><a href="mailto:someone@example.com">Forgot password?</a></p>
+        
+      <div fxFlex="100%">
           <button mat-stroked-button color="primary" type="submit">Login</button>
       </div>
      
