--- a/dislinkt-front-end/src/app/components/registration/registration.component.html
+++ b/dislinkt-front-end/src/app/components/registration/registration.component.html
@@ -1,26 +1,26 @@
 <div class="container">
     <h3 style="text-align: center">REGISTRATION</h3>
     <br>
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="registerForm" (ngSubmit)="register()">
         
       <div fxFlex="100%">
         <mat-form-field appearance="fill" class="form-field">
           <mat-label>Username</mat-label>
-          <input matInput formControlName="username" name="username" required>
+          <input matInput formControlName="username" name="username" [(ngModel)]="username" required>
           <mat-error *ngIf="registerForm.value.username">Between 4 and 10 characters is acceptable, only letters and numbers.</mat-error>         
         </mat-form-field>
       </div>
       <div fxFlex="100%">
         <mat-form-field appearance="fill" class="form-field">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" name="email" required>
+          <input matInput formControlName="email" name="email"  [(ngModel)]="email" required>
           <mat-error *ngIf="registerForm.value.email">Email is not valid.</mat-error>
         </mat-form-field>
       </div>
       <div fxFlex="100%">
         <mat-form-field appearance="fill" class="form-field">
           <mat-label>Password</mat-label>
-           <input matInput formControlName="password" name="password" type="password" required>
+           <input matInput formControlName="password" name="password" type="password" [(ngModel)]="password" required>
            <mat-error *ngIf="registerForm.value.password">Password must be a combination of lower-case, upper-case, numbers and at least 9 characters long</mat-error>
         </mat-form-field>
       </div>
