--- a/dislinkt-front-end/src/app/components/login/login.component.html
+++ b/dislinkt-front-end/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
         </mat-form-field>
       </div>
       
-      <p><a href="mailto:someone@example.com">Forgot password?</a></p>
+      <p><a [routerLink]="['/forgot-password']">Forgot your password?</a></p>
         
       <div fxFlex="100%">
           <button mat-stroked-button color="primary" type="submit">Login</button>
