--- a/dislinkt-front-end/src/app/password-recovery/password-recovery.component.html
+++ b/dislinkt-front-end/src/app/password-recovery/password-recovery.component.html
@@ -17,9 +17,8 @@
         </mat-form-field>
         <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Confirm new password</mat-label>
-          <input matInput formControlName="confirmPassword" name="confirmPassword" type="password" required pattern="{{passwordRecoveryForm.value.newPassword}}"> 
-          <mat-error *ngIf="passwordRecoveryForm.value.confirmPassword">Passwords do not match.</mat-error>
-        </mat-form-field>
+        <input matInput formControlName="confirmPassword" name="confirmPassword" [(ngModel)]="confirmPassword" type="password" required pattern="{{passwordRecoveryForm.value.password}}">
+        <mat-error *ngIf="passwordRecoveryForm.value.confirmPassword">Passwords do not match.</mat-error>        </mat-form-field>
       
       <div fxFlex="100%">
           <button mat-stroked-button color="primary" type="submit">Change</button>
