feat: Component visibility based on login status

--- a/dislinkt-front-end/src/app/components/navigation/navigation.component.html
+++ b/dislinkt-front-end/src/app/components/navigation/navigation.component.html
@@ -1,10 +1,18 @@
 <div>
     <mat-toolbar color="primary">
-        <span><mat-icon>all_inclusive</mat-icon>
+        <span>
+            <mat-icon>all_inclusive</mat-icon>
             <a class="a" routerLink=""> Dislinkt</a>
         </span>
-        <div class = "spacer"> </div> 
-            <a class="itemSpacer" mat-flat-button color="primary" routerLink="login">Log In</a>
-            <a class="itemSpacer" mat-raised-button color="accent" routerLink="registration">Sign Up</a>             
+        <div class="spacer"> </div>
+        <div *ngIf="authService.isLoggedIn$ | async; else notlogged">
+            <a class="itemSpacer" mat-flat-button color="primary" routerLink="login">Log out</a>
+        </div>
+        <div>
+            <ng-template #notlogged>
+                <a class="itemSpacer" mat-flat-button color="primary" routerLink="login">Log In</a>
+                <a class="itemSpacer" mat-raised-button color="accent" routerLink="registration">Sign Up</a>
+            </ng-template>
+        </div>
     </mat-toolbar>
 </div>
