--- a/dislinkt-front-end/src/app/components/registration/registration.component.scss
+++ b/dislinkt-front-end/src/app/components/registration/registration.component.scss
@@ -1,5 +1,9 @@
 .container {
-    width: 200px;
+    width: 400px;
     margin: 100px auto;
    
 }
+
+.mat-cardr {
+    background-color: green;
+  }
