--- a/dislinkt-front-end/src/app/components/navigation/navigation.component.html
+++ b/dislinkt-front-end/src/app/components/navigation/navigation.component.html
@@ -4,6 +4,12 @@
             <mat-icon>all_inclusive</mat-icon>
             <a class="a" routerLink=""> Dislinkt</a>
         </span>
+        <div>
+            <div *ngIf="authService.isLoggedIn$ | async">
+                <a class="itemSpacer" mat-flat-button color="primary" routerLink="admin">ADMIN</a>
+                <a class="itemSpacer" mat-flat-button color="primary" routerLink="user">USER</a>
+            </div>           
+        </div>
         <div class="spacer"> </div>
         <div *ngIf="authService.isLoggedIn$ | async; else notlogged">
             <a class="itemSpacer" mat-flat-button color="primary" (click)="authService.logout()">Log out</a>
