feat: Angular guard user and login header

--- a/dislinkt-front-end/src/app/components/admin/admin.component.html
+++ b/dislinkt-front-end/src/app/components/admin/admin.component.html
@@ -1,3 +1,7 @@
 <br>
 <br>
 <h3>You are logged in and authorized as ADMIN</h3>
+<br>
+<div>
+    <a mat-flat-button color="primary" (click)="testAdmin()">TEST API Call</a>
+</div>
