--- a/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
+++ b/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,7 @@
 <br>
 <br>
-<h3>You are logged in as USER</h3>
+<h3>You are logged in and authorized as USER</h3>
+<br>
+<div>
+    <a mat-flat-button color="primary" (click)="testUser()">TEST API Call</a>
+</div>
