feat: Loading public posts

--- a/dislinkt-front-end/src/app/components/posts-public/posts-public.component.html
+++ b/dislinkt-front-end/src/app/components/posts-public/posts-public.component.html
@@ -1,1 +1,21 @@
-<p>posts-public works!</p>
+<div style="margin-left: 5px; margin-right: 5px;">
+    <br>
+    <mat-card *ngFor="let post of posts" > 
+        <mat-card style="width: 900px;">
+           <mat-card-header style="background-color: rgb(255,64,129);">
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title style="color: white; margin: 5px;">{{post.username}} </mat-card-title>
+            <mat-card-subtitle style="color: white; margin: 5px;"><br>Posted on: {{post.datePostedString}}<br></mat-card-subtitle>
+           </mat-card-header>
+           <br>
+            <mat-card-subtitle>&#9679; {{post.likes.length}} likes</mat-card-subtitle>
+            <mat-card-content>
+                <strong>{{post.title}}</strong>
+                <br><br>
+                {{post.content}}
+            </mat-card-content>
+            <br>         
+        </mat-card>
+    </mat-card>
+</div>
+
