--- a/dislinkt-front-end/src/app/components/navigation/navigation.component.html
+++ b/dislinkt-front-end/src/app/components/navigation/navigation.component.html
@@ -6,8 +6,11 @@
         </span>
         <div>
             <div *ngIf="authService.isLoggedIn$ | async">
+                <!-- 
                 <a class="itemSpacer" mat-flat-button color="primary" routerLink="admin">ADMIN</a>
                 <a class="itemSpacer" mat-flat-button color="primary" routerLink="user">USER</a>
+                -->
+                <mat-icon>public</mat-icon> <a class="itemSpacer" mat-flat-button color="primary" routerLink="feed">Feed</a>
             </div>           
         </div>
         <div class="spacer"> </div>
