--- a/dislinkt-front-end/src/app/components/admin/admin.component.html
+++ b/dislinkt-front-end/src/app/components/admin/admin.component.html
@@ -12,7 +12,7 @@
         </mat-card-header>
    
         <mat-card-content>
-            <form [formGroup]="profileForm">
+            <form [formGroup]="profileForm" (ngSubmit)="save()">
         
                 <div fxLayout="row" fxLayoutAlign="space-between">
                     <div  fxFlex="0 0 47%">
@@ -65,7 +65,7 @@
                         <mat-form-field class="full-width" appearance="fill" style="margin-top: 20px;">
                             <mat-label>Gender</mat-label>
                             <input matInput>
-                                <mat-radio-group matInput>
+                                <mat-radio-group matInput name="gender" formControlName="gender" [(ngModel)]="this.user.gender">
                                 <mat-radio-button name="male" value="male">male</mat-radio-button>
                                 <mat-radio-button name="female" value="female">female</mat-radio-button>
                             </mat-radio-group>
@@ -75,7 +75,7 @@
                     <div fxLayout="column" fxFlex="0 0 47%">
                         <mat-form-field class="full-width" appearance="fill" style="margin-top: 20px;">
                             <mat-label>Date of Birth</mat-label>
-                            <input matInput [matDatepicker]="picker">
+                            <input matInput [matDatepicker]="picker" name="dateOfBirth" formControlName="dateOfBirth" [(ngModel)]="this.user.dateOfBirth">
                             <mat-hint>MM/DD/YYYY</mat-hint>
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>            
@@ -85,8 +85,7 @@
                 <br>
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <div fxLayout="row" fxFlex="0 0 30%" fxLayoutAlign="space-between center">
-                        <button mat-stroked-button color="primary">Save</button>&nbsp;
-                        <button mat-stroked-button color="primary">Cancel</button>
+                        <button mat-stroked-button color="primary" type="submit">Save</button>
                     </div>
                 </div>
 
