--- a/dislinkt-front-end/src/app/components/navigation/navigation.component.html
+++ b/dislinkt-front-end/src/app/components/navigation/navigation.component.html
@@ -11,6 +11,7 @@
                 <a class="itemSpacer" mat-flat-button color="primary" routerLink="user">USER</a>
                 -->
                 <mat-icon>public</mat-icon> <a class="itemSpacer" mat-flat-button color="primary" routerLink="feed">Feed</a>
+                <a class="itemSpacer" mat-flat-button color="primary" routerLink="myPosts">My posts</a>
             </div>           
         </div>
         <div class="spacer"> </div>
