--- a/dislinkt-front-end/src/app/components/feed/feed.component.html
+++ b/dislinkt-front-end/src/app/components/feed/feed.component.html
@@ -3,7 +3,9 @@
     <mat-card *ngFor="let post of posts" > 
         <mat-card style="width: 900px;">
            <mat-card-header style="background-color: rgb(255,64,129);">
-            <div mat-card-avatar class="example-header-image"></div>
+            <div mat-card-avatar>
+                <img class="post-image" src="{{post.image}}">
+            </div>
             <mat-card-title style="color: white; margin: 5px;">{{post.username}} </mat-card-title>
             <mat-card-subtitle style="color: white; margin: 5px;"><br>Posted on: {{post.datePostedString}}<br></mat-card-subtitle>
            </mat-card-header>
