--- a/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
+++ b/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
@@ -1,6 +1,7 @@
 <br>
 <br>
-<h3>You are logged in and authorized as USER</h3>
+<label style="font-weight: bold">Following:{{following.length}} </label> <label style="margin-left: 30px; font-weight: bold;">Followers:{{followers.length}}</label>
+<br>
 <br>
 <div>
     <a mat-flat-button color="primary" (click)="testUser()">TEST API Call</a>
