--- a/dislinkt-front-end/src/app/components/posts-public/posts-public.component.html
+++ b/dislinkt-front-end/src/app/components/posts-public/posts-public.component.html
@@ -19,6 +19,13 @@
                 {{post.content}}
             </mat-card-content>
             <br>
+            <mat-card-footer>
+                <div>
+                    <button (click)="likePost(post.id)" style="background-color: transparent; border: none; color: rgb(255,64,129);"><mat-icon style="margin-left:auto;">thumb_up</mat-icon></button>  
+                    <button (click)="dislikePost(post.id)" style="background-color: transparent; border: none; color: rgb(255,64,129);"><mat-icon style="margin-left:auto;">thumb_down</mat-icon></button>  
+                </div>
+            </mat-card-footer>
+            <br>
         </mat-card>
     </mat-card>
 </div>
