fix: Fixed sonar bugs

--- a/dislinkt-front-end/src/app/components/my-posts/my-posts.component.html
+++ b/dislinkt-front-end/src/app/components/my-posts/my-posts.component.html
@@ -6,7 +6,7 @@
         <mat-card style="width: 900px;">
            <mat-card-header style="background-color: rgb(255,64,129);">
             <div mat-card-avatar class=>
-                <img class="post-image" src="{{post.image}}">
+                <img class="post-image" src="{{post.image}}" alt="post-image">
             </div>
             <button (click)="changeViewToEditable(post)" style="margin-left: 70%; background-color: transparent; color: white; border: none; height: 20px;"><mat-icon style="margin-left:auto">edit</mat-icon></button>
             <button (click)="changeViewToRemovable()" style="background-color: transparent; border: none; color: white; height: 20px;"><mat-icon style="margin-left:auto;">delete</mat-icon></button>
