--- a/dislinkt-front-end/src/app/components/feed/feed.component.html
+++ b/dislinkt-front-end/src/app/components/feed/feed.component.html
@@ -4,7 +4,7 @@
         <mat-card style="width: 900px;">
            <mat-card-header style="background-color: rgb(255,64,129);">
             <div mat-card-avatar>
-                <img class="post-image" src="{{post.image}}">
+                <img class="post-image" src="{{post.image}}" alt="post-image">
             </div>
             <mat-card-title style="color: white; margin: 5px;">{{post.username}} </mat-card-title>
             <mat-card-subtitle style="color: white; margin: 5px;"><br>Posted on: {{post.datePostedString}}<br></mat-card-subtitle>
