--- a/dislinkt-front-end/src/app/components/navigation/navigation.component.html
+++ b/dislinkt-front-end/src/app/components/navigation/navigation.component.html
@@ -6,9 +6,8 @@
         </span>
         <div>
             <div *ngIf="authService.isLoggedIn$ | async">
-                <a class="itemSpacer" mat-flat-button color="primary" routerLink="admin">ADMIN</a>
-                <a class="itemSpacer" mat-flat-button color="primary" routerLink="user">USER</a>
-                <mat-icon>public</mat-icon> <a class="itemSpacer" mat-flat-button color="primary" routerLink="feed">Feed</a>
+                <mat-icon>public</mat-icon> <a class="itemSpacer" mat-flat-button color="primary" routerLink="user">Profile</a>
+                <a class="itemSpacer" mat-flat-button color="primary" routerLink="feed">Feed</a>
                 <a class="itemSpacer" mat-flat-button color="primary" routerLink="myPosts">My posts</a>
             </div>           
         </div>
