--- a/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
+++ b/dislinkt-front-end/src/app/components/user-profile/user-profile.component.html
@@ -1,12 +1,7 @@
 <br>
-<br>
 <label style="font-weight: bold">Following:{{following.length}} </label> <label style="margin-left: 30px; font-weight: bold;">Followers:{{followers.length}}</label>
 <br>
 <br>
-<div>
-    <a mat-flat-button color="primary" (click)="testUser()">TEST API Call</a>
-    <br><br>
-</div>
 <div class="container">
     <mat-card>
         <mat-card-header>
@@ -85,7 +80,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div fxLayout="column" fxFlex="0 0 47%">
+                    <div *ngIf="user.role==='USER'" fxLayout="column" fxFlex="0 0 47%">
                         <mat-form-field class="full-width" appearance="fill" style="margin-top: 20px;">
                             <mat-label>Is Public</mat-label>
                             <input matInput>
@@ -96,21 +91,13 @@
                         </mat-form-field>
                     
                     </div>
-                    <div fxLayout="column" fxFlex="0 0 47%">
+                    <div *ngIf="user.role==='USER'" fxLayout="column" fxFlex="0 0 47%">
                         <mat-form-field class="full-width" appearance="fill" style="margin-top: 20px;">
                             <mat-label>Biography</mat-label>
                             <input matInput name="biography" formControlName="biography" [(ngModel)]="this.user.profile.biography">
                         </mat-form-field>
                     </div>
-                        <!-- [(ngModel)]="this.user.profile.biography"-->
-
-
-                    
-
-
                 </div>
-               
-                
               
                 <br>
                 <div fxLayout="row" fxLayoutAlign="center center">
@@ -123,7 +110,7 @@
     </mat-card>
 
    
-    <mat-card class="custom">
+    <mat-card class="custom" *ngIf="user.role==='USER'">
         <mat-card-header>
             <mat-card-title>Skills</mat-card-title>
         </mat-card-header>
@@ -138,7 +125,7 @@
 
 
 
-    <mat-card class="custom">
+    <mat-card class="custom" *ngIf="user.role==='USER'">
         <mat-card-header>
             <mat-card-title>Interests</mat-card-title>
         </mat-card-header>  
@@ -154,7 +141,7 @@
     
 
 
-    <mat-card>
+    <mat-card *ngIf="user.role==='USER'">
         <mat-card-header>
             <mat-card-title>Education</mat-card-title>
         </mat-card-header>
@@ -192,7 +179,7 @@
         </mat-card-content>
     </mat-card>
 
-    <mat-card>
+    <mat-card *ngIf="user.role==='USER'">
         <mat-card-header>
             <mat-card-title>Experience</mat-card-title>
         </mat-card-header>
